fix: update dark mode text color

--- a/public/zomato-clone/public/css/resturant.css
+++ b/public/zomato-clone/public/css/resturant.css
@@ -80,7 +80,7 @@
   overflow: hidden;
 }
 [data-theme="dark"] .page-title {
-  color: white;
+  color: white !important;
 }
 
 .card-img {
